Avoid weird horizontal scrolling

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,7 +11,6 @@ body {
 }
 
 header {
-  width: 100%;
   padding: 0.5rem 0.5rem;
   nav {
     display: block;
